<resources>
    <string name="app_name">Chess48</string>
    <string name="chess">Chess</string>
    <string name="newGame">New Game</string>
    <string name="viewGame">View Games</string>
    <string name="returnM">Return</string>
    <string name="playG">Play Game</string>
    <string name="choose">Choose Your Piece</string>
    <string name="redo">Undo</string>
    <string name="help">Help</string>
    <string name="draw">Draw</string>
    <string name="resign">Resign</string>
</resources>
