<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AliceBlue"
    tools:context="com.example.shahrehman.chess48.Main_Activity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="6dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/chess"
            android:textSize="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/new_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newGame"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/view_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/new_name"
            android:layout_alignRight="@+id/new_name"
            android:layout_below="@+id/new_name"
            android:layout_marginTop="108dp"
            android:text="@string/viewGame"
            android:layout_alignLeft="@+id/new_name"
            android:layout_alignStart="@+id/new_name" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
